--- a/coworkings.html
+++ b/coworkings.html
@@ -308,56 +308,56 @@
 
   <!-- Seção: Outros Projetos da Inovação -->
   <section id="outros-projetos" class="w-full bg-white pb-16 sm:pb-24">
-        <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-            <!-- Título da Seção -->
-            <div class="text-center mb-12">
-                <h3 class="text-3xl font-bold text-crea-blue text-center mb-8">Conheça os outros projetos da inovação
-                </h3>
-            </div>
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+      <!-- Título da Seção -->
+      <div class="text-center mb-12">
+        <h3 class="text-3xl font-bold text-crea-blue text-center mb-8">Conheça os outros projetos da inovação
+        </h3>
+      </div>
 
-            <!-- Grid de Cards de Projetos -->
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-6">
+      <!-- Grid de Cards de Projetos -->
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-6">
 
-                <!-- Card Projeto 1 -->
-                <a href="coworkings.html"
-                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
-                    <img src="img/gerais/ferramentas-de-gestao-de-coworking-sem-texto.png" alt="Projeto 1"
-                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
-                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
-                    <h3 class="relative text-white text-xl font-bold">Coworkings</h3>
-                </a>
+        <!-- Card Projeto 1 -->
+        <a href="coworkings.html"
+          class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+          <img src="img/gerais/ferramentas-de-gestao-de-coworking-sem-texto.png" alt="Projeto 1"
+            class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+          <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+          <h3 class="relative text-white text-xl font-bold">Coworkings</h3>
+        </a>
 
-                <!-- Card Projeto 2 -->
-                <a href="capacitacao.html"
-                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
-                    <img src="img/gerais/plataforma-de-capacitacao-sem-texto.png" alt="Projeto 2"
-                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
-                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
-                    <h3 class="relative text-white text-xl font-bold">Plataforma de Capacitação</h3>
-                </a>
+        <!-- Card Projeto 2 -->
+        <a href="capacitacao.html"
+          class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+          <img src="img/gerais/plataforma-de-capacitacao-sem-texto.png" alt="Projeto 2"
+            class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+          <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+          <h3 class="relative text-white text-xl font-bold">Plataforma de Capacitação</h3>
+        </a>
 
-                <!-- Card Projeto 3 -->
-                <a href="banco-de-talentos.html"
-                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
-                    <img src="img/gerais/banco-de-talentos-sem-texto.png" alt="Projeto 3"
-                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
-                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
-                    <h3 class="relative text-white text-xl font-bold">Banco de Talentos</h3>
-                </a>
+        <!-- Card Projeto 3 -->
+        <a href="banco-de-talentos.html"
+          class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+          <img src="img/gerais/banco-de-talentos-sem-texto.png" alt="Projeto 3"
+            class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+          <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+          <h3 class="relative text-white text-xl font-bold">Banco de Talentos</h3>
+        </a>
 
-                <!-- Card Projeto 4 -->
-                <a href="clube-de-vantagens.html"
-                    class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
-                    <img src="img/gerais/clube-de-vantagens.png" alt="Projeto 3"
-                        class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
-                    <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
-                    <h3 class="relative text-white text-xl font-bold">Clube de Vantages</h3>
-                </a>
+        <!-- Card Projeto 4 -->
+        <a href="clube-de-vantagens.html"
+          class="relative h-64 rounded-xl overflow-hidden shadow-lg group flex items-end justify-center text-center p-4">
+          <img src="img/gerais/clube-de-vantagens.png" alt="Projeto 3"
+            class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+          <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
+          <h3 class="relative text-white text-xl font-bold">Clube de Vantages</h3>
+        </a>
 
 
-            </div>
-        </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
   <!-- Toast: espaço ainda não liberado -->
   <div id="toast-espaco-bloqueado" class="fixed inset-x-0 bottom-4 flex justify-center z-50 pointer-events-none hidden">
@@ -429,19 +429,18 @@
               <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
-                </path>
+                  d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
               </svg>
-              <span>0800 031 2732</span>
+              <a href="tel:08000312732" class="underline">0800 031 2732</a>
             </li>
+
             <li class="flex items-center">
               <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
-                </path>
+                  d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
               </svg>
-              <span>atendimento@crea-mg.org.br</span>
+              <a href="mailto:atendimento@crea-mg.org.br" class="underline">atendimento@crea-mg.org.br</a>
             </li>
           </ul>
         </div>
