--- a/capacitacao.html
+++ b/capacitacao.html
@@ -184,7 +184,8 @@
                             class="hover:text-purple-300 transition-colors duration-300">Banco de Talentos</a></li>
                     <li><a href="clube-de-vantagens.html"
                             class="hover:text-purple-300 transition-colors duration-300">Clube de vantagens</a></li>
-                    <li><a href="beneficios.html" class="hover:text-purple-300 transition-colors duration-300">Benefícios</a></li>
+                    <li><a href="beneficios.html"
+                            class="hover:text-purple-300 transition-colors duration-300">Benefícios</a></li>
 
                     <!-- <li><a href="#opcao5" class="hover:text-purple-300 transition-colors duration-300">Opção 5</a></li>
                     <li><a href="#opcao6" class="hover:text-purple-300 transition-colors duration-300">Opção 6</a></li>
@@ -244,7 +245,7 @@
                             mpliam suas competências e conectam você às demandas reais do
                             mercado.</strong>
                     </p>
-                    <a href="#"
+                    <a href="https://qualificar.crea-mg.com.br/" target="_blank" rel="noopener noreferrer"
                         class="inline-block mt-6 border-2 border-crea-blue text-crea-blue font-bold py-3 px-8 rounded-full hover:underline">
                         Acessar a plataforma!
                     </a>
@@ -608,19 +609,18 @@
                             <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
-                                </path>
+                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                             </svg>
-                            <span>0800 031 2732</span>
+                            <a href="tel:08000312732" class="underline">0800 031 2732</a>
                         </li>
+
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
-                                </path>
+                                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                             </svg>
-                            <span>atendimento@crea-mg.org.br</span>
+                            <a href="mailto:atendimento@crea-mg.org.br" class="underline">atendimento@crea-mg.org.br</a>
                         </li>
                     </ul>
                 </div>
