--- a/banco-de-talentos.html
+++ b/banco-de-talentos.html
@@ -167,7 +167,7 @@
 <body class="bg-white text-gray-800">
 
     <!-- Seção 1: Cabeçalho Principal -->
-    <section id="home" class="w-full bg-white shadow-md">
+    <section id="home" class="w-full bg-white shadow-md fixed z-50">
 
         <!-- Cabeçalho Superior -->
         <header class="w-full max-w-7xl mx-auto p-6 md:px-8 flex justify-between items-center">
@@ -224,7 +224,7 @@
     </section>
 
     <!-- Seção do Banner -->
-    <section class="w-full bg-white py-8">
+    <section class="w-full bg-white py-8 pt-40">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <img src="img/capas/banco-de-talentos.png" alt="Banner Principal" class="w-full h-auto object-cover">
         </div>
