--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             </a>
         </footer>
     </section>
+    
     <!-- Seção 2: Placeholder do Vídeo -->
     <section id="video-section" 
          class="h-screen w-full flex items-center justify-center p-4 sm:p-8"
@@ -141,7 +142,7 @@
                 <h2 class="text-3xl sm:text-4xl md:text-5xl font-black uppercase text-white leading-none">
                     Sobre o<br>Crealab Minas
                 </h2>
-                <a href="#" class="inline-block mt-4 bg-white text-black px-5 py-2 rounded-full text-sm font-bold hover:bg-gray-200 transition-colors">
+                <a href="o-crea-lab.html" class="inline-block mt-4 bg-white text-black px-5 py-2 rounded-full text-sm font-bold hover:bg-gray-200 transition-colors">
                     Saiba mais &rarr;
                 </a>
             </div>
