--- a/beneficios.html
+++ b/beneficios.html
@@ -49,7 +49,7 @@
 <body class="bg-white text-gray-800">
 
     <!-- Seção 1: Cabeçalho Principal -->
-    <section id="home" class="w-full bg-white shadow-md">
+    <section id="home" class="w-full bg-white shadow-md fixed z-50">
 
         <!-- Cabeçalho Superior -->
         <header class="w-full max-w-7xl mx-auto p-6 md:px-8 flex justify-between items-center">
@@ -104,11 +104,11 @@
 
 
     <!-- Seção: Conheça nossos espaços -->
-    <section id="espacos" class="w-full bg-theme-primary-alt-bg py-16 sm:py-24">
+    <section id="espacos" class="w-full bg-theme-primary-alt-bg sm:py-24">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Título da Seção -->
             <div class="text-center mb-12">
-                <h3 class="text-2xl md:text-3xl font-bold text-crea-blue">Benefícios aos registrados</h3>
+                <h3 class="text-2xl md:text-3xl font-bold text-crea-blue pt-20">Benefícios aos registrados</h3>
                 <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">
                     Conheça aqui os benefícios que os registrados no CREA-MG possuem</p>
             </div>
