--- a/o-crea-lab.html
+++ b/o-crea-lab.html
@@ -159,7 +159,7 @@
 <body class="bg-white text-gray-800">
 
     <!-- Seção 1: Cabeçalho Principal -->
-    <section id="home" class="w-full bg-white shadow-md">
+    <section id="home" class="w-full bg-white shadow-md fixed z-50">
 
         <!-- Cabeçalho Superior -->
         <header class="w-full max-w-7xl mx-auto p-6 md:px-8 flex justify-between items-center">
@@ -207,10 +207,10 @@
     </section>
 
     <!-- Nova Seção de Elementos -->
-<section id="outros-elementos" class="w-full bg-white pt-16 pb-8 sm:pt-24 sm:pb-12">
+<section id="outros-elementos" class="w-full bg-white pt-16 pb-8 sm:pt-24 sm:pb-12 pt-40">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-16">
-            <h2 class="text-3xl md:text-4xl font-bold text-crea-blue">O CREALAB MG</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-crea-blue pt-20">O CREALAB MG</h2>
         </div>
 
         <div class="mb-1">
