--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 {
                     id: 'secao-3',
                     titulo: "CAPACITA-MG ",
-                    texto: "Formação que transforma. Conhecimento que impulsiona. Carreiras que impactam Minas.",
+                    texto: "A plataforma de capacitação do Crea-MG oferecerá cursos online, gratuitos e de curta duração em diversas áreas do conhecimento, promovendo o desenvolvimento profissional, a valorização das profissões do Sistema Confea/Crea e o fortalecimento da atuação ética e fiscalizatória.",
                     corClasse: 'azul-claro',
                     corHex: '#39A8E0',
                     imagemUrl: 'img/banner/plataforma-capacitacao-banner1.png',
