add api consume and fix logic and layout project

--- a/beneficios.html
+++ b/beneficios.html
@@ -65,8 +65,10 @@
                             CreaLab</a></li>
                     <li><a href="coworkings.html"
                             class="hover:text-purple-300 transition-colors duration-300">Coworkings</a></li>
+                    <li><a href="ferramentas-digitais.html"
+                            class="hover:text-purple-300 transition-colors duration-300">Ferramentas Digitais</a></li>
                     <li><a href="capacitacao.html"
-                            class="hover:text-purple-300 transition-colors duration-300">Capacitação</a></li>
+                            class="hover:text-purple-300 transition-colors duration-300">Capacita-MG</a></li>
                     <li><a href="banco-de-talentos.html"
                             class="hover:text-purple-300 transition-colors duration-300">Banco de Talentos</a></li>
                     <li><a href="clube-de-vantagens.html"
@@ -92,10 +94,19 @@
         <!-- Menu de Navegação (Mobile) - Oculto por padrão -->
         <div id="mobile-menu"
             class="fixed inset-0 bg-white/95 backdrop-blur-sm z-20 flex-col items-center justify-center space-y-8 text-2xl text-crea-blue hidden">
-            <a href="o-crea-lab.html" class="mobile-menu-link">O CreaLab</a>
-            <a href="coworkings.html" class="mobile-menu-link">Coworkings</a>
-            <a href="capacitacao.html" class="mobile-menu-link">Capacitação</a>
-            <a href="banco-de-talentos.html" class="mobile-menu-link">Banco de Talentos</a>
+       <a href="o-crea-lab.html" class="mobile-menu-link">O CreaLab</a>
+        <a href="coworkings.html" class="mobile-menu-link">Coworkings</a>
+        <a href="ferramentas-digitais.html" class="mobile-menu-link"
+          >Ferramentas Digitais</a
+        >
+        <a href="capacitacao.html" class="mobile-menu-link">Capacita-MG</a>
+        <a href="banco-de-talentos.html" class="mobile-menu-link"
+          >Banco de Talentos</a
+        >
+        <a href="clube-de-vantagens.html" class="mobile-menu-link"
+          >Clube de vantagens</a
+        >
+        <a href="beneficios.html" class="mobile-menu-link">Benefícios</a>
             <!-- <a href="#opcao5" class="mobile-menu-link">Opção 5</a>
             <a href="#opcao6" class="mobile-menu-link">Opção 6</a>
             <a href="#opcao7" class="mobile-menu-link">Opção 7</a> -->
@@ -223,7 +234,7 @@
                     <img src="img/gerais/plataforma-de-capacitacao-sem-texto.png" alt="Projeto 2"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent"></div>
-                    <h3 class="relative text-white text-xl font-bold">Plataforma de Capacitação</h3>
+                    <h3 class="relative text-white text-xl font-bold">Capacita-MG</h3>
                 </a>
 
                 <!-- Card Projeto 3 -->
