--- a/o-crea-lab.html
+++ b/o-crea-lab.html
@@ -16,7 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
 
     <style>
-        /* Estilo para usar a fonte Inter */
         body {
             font-family: 'Inter', sans-serif;
             -webkit-font-smoothing: antialiased;
@@ -173,7 +172,8 @@
                 <ul class="flex items-center space-x-8 text-sm font-medium text-crea-blue">
                     <li><a href="o-crea-lab.html" class="hover:text-purple-300 transition-colors duration-300">O CreaLab</a></li>
                     <li><a href="coworkings.html" class="hover:text-purple-300 transition-colors duration-300">Coworkings</a></li>
-                    <li><a href="capacitacao.html" class="hover:text-purple-300 transition-colors duration-300">Capacitação</a></li>
+                    <li><a href="ferramentas-digitais.html" class="hover:text-purple-300 transition-colors duration-300">Ferramentas Digitais</a></li>
+                    <li><a href="capacitacao.html" class="hover:text-purple-300 transition-colors duration-300">Capacita-MG</a></li>
                     <li><a href="banco-de-talentos.html" class="hover:text-purple-300 transition-colors duration-300">Banco de Talentos</a></li>
                     <li><a href="clube-de-vantagens.html" class="hover:text-purple-300 transition-colors duration-300">Clube de vantagens</a></li>
                      <li><a href="beneficios.html" class="hover:text-purple-300 transition-colors duration-300">Benefícios</a></li>
@@ -196,13 +196,20 @@
         <!-- Menu de Navegação (Mobile) - Oculto por padrão -->
         <div id="mobile-menu"
             class="fixed inset-0 bg-white/95 backdrop-blur-sm z-20 flex-col items-center justify-center space-y-8 text-2xl text-crea-blue hidden">
-            <a href="o-crea-lab.html" class="mobile-menu-link">O CreaLab</a>
-            <a href="coworkings.html" class="mobile-menu-link">Coworkings</a>
-            <a href="capacitacao.html" class="mobile-menu-link">Capacitação</a>
-            <a href="banco-de-talentos.html" class="mobile-menu-link">Banco de Talentos</a>
-            <!-- <a href="#opcao5" class="mobile-menu-link">Opção 5</a>
-            <a href="#opcao6" class="mobile-menu-link">Opção 6</a>
-            <a href="#opcao7" class="mobile-menu-link">Opção 7</a> -->
+           <a href="o-crea-lab.html" class="mobile-menu-link">O CreaLab</a>
+        <a href="coworkings.html" class="mobile-menu-link">Coworkings</a>
+        <a href="ferramentas-digitais.html" class="mobile-menu-link"
+          >Ferramentas Digitais</a
+        >
+        <a href="capacitacao.html" class="mobile-menu-link">Capacita-MG</a>
+        <a href="banco-de-talentos.html" class="mobile-menu-link"
+          >Banco de Talentos</a
+        >
+        <a href="clube-de-vantagens.html" class="mobile-menu-link"
+          >Clube de vantagens</a
+        >
+        <a href="beneficios.html" class="mobile-menu-link">Benefícios</a>
+            
         </div>
     </section>
 
@@ -243,65 +250,65 @@
           <div>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+            <img src="img/about-crealab/about-crealab-1.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Inova CreaLab</h4>
             <p class="text-gray-600">Laboratório de inovação para estimular novas ideias, capacitação e empreendedorismo. Oferece um espaço colaborativo e dinâmico para criar soluções práticas e reduzir a burocracia.</p>
         </div>
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+           <img src="img/about-crealab/about-crealab-2.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Modernização da gestão de indicadores e projetos</h4>
             <p class="text-gray-600">Estrutura clara de governança, com definição de papéis e responsabilidades, para acompanhar e usar informações de modo estratégico e operacional. Promove a transparência, agilidade e apoio às decisões.</p>
         </div>
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+            <img src="img/about-crealab/about-crealab-3.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Otimização de Processos com uso de Inteligência Artificial</h4>
             <p class="text-gray-600">Introduzir e integrar a inteligência artificial (IA) nas atividades e processos do Conselho. Começa com conscientização e capacitação, avançando para uso prático em processos importantes e na solução de problemas.</p>
         </div>
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+            <img src="img/about-crealab/about-crealab-4.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Otimização de processos, ferramentas e infraestrutura de TI</h4>
             <p class="text-gray-600">Modernizar e integrar a gestão de TI, a partir da atualização de sistemas e infraestrutura para maior segurança, produtividade e sustentabilidade. Implantar soluções como o Office 365, gestão de chamados e o novo sistema "Core" e estruturar base de dados unificada e monitoramento de sistemas críticos.</p>
         </div>
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+            <img src="img/about-crealab/about-crealab-5.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Modernização de processos administrativos e gestão documental</h4>
             <p class="text-gray-600">Transformar a gestão administrativa e documental, promovendo eficiência, transparência, segurança da informação e conformidade legal. Implantar o Sistema Eletrônico de Informações (SEI), padronizar procedimentos, organizar arquivos e proteger dados pessoais. Ampliar o acesso a informações públicas por meio do Portal da Transparência e Dados Abertos.</p>
         </div>
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+            <img src="img/about-crealab/about-crealab-6.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Otimização do Atendimento – Experiência 360</h4>
             <p class="text-gray-600">Transformar o atendimento a profissionais, empresas e sociedade, oferecendo experiência integrada e eficiente. Modernizar canais de atendimento para respostas ágeis e satisfatórias.</p>
         </div>
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+            <img src="img/about-crealab/about-crealab-7.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Modernização da Divisão Técnica - ModernizaTec</h4>
             <p class="text-gray-600">Modernizar a Divisão Técnica para aumentar a eficiência, padronizar análises, automatizar rotinas e melhorar a governança dos processos. Garantir decisões técnicas mais previsíveis e reduzir retrabalhos.</p>
         </div>
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+           <img src="img/about-crealab/about-crealab-8.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Ampliação e Modernização da Fiscalização</h4>
             <p class="text-gray-600">Fortalecer a Divisão de Fiscalização com modernização de processos, automação, melhoria da qualidade das informações, revisão de estruturas de classificação e atualização da infraestrutura tecnológica.</p>
         </div>
         <div class="bg-white rounded-lg	 p-4 shadow-md">
-            <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
+            <img src="img/about-crealab/about-crealab-9.svg"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Desenvolvimento e Qualidade de vida</h4>
             <p class="text-gray-600">Promover a saúde física, mental e o bem-estar dos colaboradores e profissionais. Implantar programas de saúde, ergonomia, ginástica laboral, campanhas de vacinação, apoio psicossocial e incentivo a atividades físicas. Além de garantir condições adequadas de trabalho, equilíbrio entre vida profissional e pessoal e oportunidades de desenvolvimento.</p>
         </div>
-        <div class="bg-white rounded-lg	 p-4 shadow-md">
+       <!--  <div class="bg-white rounded-lg	 p-4 shadow-md">
             <img src="https://placehold.co/400x200/D1D5DB/4B5563?text=Placeholder"
                 alt="Placeholder de Imagem" class="w-full h-32 object-cover rounded-lg mb-4">
             <h4 class="text-xl font-bold text-crea-blue-bright mb-2">Otimização de Relacionamento Estratégico Institucional</h4>
             <p class="text-gray-600">Fortalecer e apoiar as empresas registradas no Conselho. Oferecer capacitação, conexões estratégicas e ferramentas para aumentar competitividade, inovação e transformação digital.</p>
-        </div>
+        </div> -->
     </div>
 </div>
 </div>
