--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
             </li>
             <li>
               <a
+                href="ferramentas-digitais.html"
+                class="hover:text-purple-300 transition-colors duration-300"
+                >Ferramentas Digitais</a
+              >
+            </li>
+            <li>
+              <a
                 href="capacitacao.html"
                 class="hover:text-purple-300 transition-colors duration-300"
                 >Capacita-MG</a
@@ -195,12 +202,17 @@
       >
         <a href="o-crea-lab.html" class="mobile-menu-link">O CreaLab</a>
         <a href="coworkings.html" class="mobile-menu-link">Coworkings</a>
-        <a href="coworkings.html" class="mobile-menu-link">Coworkings</a>
-        <a href="coworkings.html" class="mobile-menu-link">Coworkings</a>
+        <a href="ferramentas-digitais.html" class="mobile-menu-link"
+          >Ferramentas Digitais</a
+        >
         <a href="capacitacao.html" class="mobile-menu-link">Capacita-MG</a>
         <a href="banco-de-talentos.html" class="mobile-menu-link"
           >Banco de Talentos</a
         >
+        <a href="clube-de-vantagens.html" class="mobile-menu-link"
+          >Clube de vantagens</a
+        >
+        <a href="beneficios.html" class="mobile-menu-link">Benefícios</a>
       </div>
 
       <main class="flex-grow flex items-center justify-center z-10">
@@ -600,7 +612,7 @@
               "Visa estabelecer parcerias entre o CREA MG e empresas desenvolvedoras de softwares de mercado relevantes para os profissionais registrados no conselho.",
             corClasse: "azul-escuro",
             corHex: "#2A2E62",
-            imagemUrl: "img/banner/ferramentas-digitais-banner1.svg",
+            imagemUrl: "img/banner/ferramentas-digitais-banner11.png",
             href: "ferramentas-digitais.html",
           },
           {
